# litellm-key-portal

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  docker-compose.yml  infomail.txt  portal.py  pyproject.toml  requirements-dev.txt  requirements.txt  rundmail.txt
scripts/: reset_students.py  seed_dummy_students.py  send_info_mail.py  send_test_info_mail.py
tests/: test_helpers.py  test_mail_scripts.py  test_portal.py
